# horizon-bsn-old

./: .gitignore  AUTHORS  CONTRIBUTING.rst  ChangeLog  HACKING.rst  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
doc/source/: conf.py  index.rst  installation.rst  usage.rst
docker/centos/: Dockerfile
horizon_bsn/: __init__.py
horizon_bsn/api/: __init__.py  neutron.py
horizon_bsn/api/rest/: __init__.py  neutron.py
horizon_bsn/bsndashboard/: __init__.py  dashboard.py
horizon_bsn/bsndashboard/networktemplate/: panel.py  views.py
horizon_bsn/bsndashboard/networktemplateassignment/: panel.py  urls.py
horizon_bsn/bsndashboard/reachabilitytests/: panel.py  tests.py  urls.py  views.py
horizon_bsn/bsndashboard/routerrules/: panel.py
horizon_bsn/bsndashboard/static/: bsndashboard.module.js  neutron.service.js
horizon_bsn/bsndashboard/static/networktemplate/: networktemplate.module.js  panel.html
horizon_bsn/bsndashboard/static/networktemplateassignment/: networktemplateassignment.module.js  panel.html
horizon_bsn/content/connections/: README  panel.py  tabs.py  urls.py  views.py
horizon_bsn/content/connections_admin/: panel.py  tests.py  urls.py  views.py
horizon_bsn/enabled/: _3000_connections.py  _3010_connections.py  _8000_bsndashboard.py  _8005_bsnextensions.py  _8010_reachability_tests.py  _8012_network_template.py  _8013_router_rules.py
horizon_bsn/future_enabled/: _8000_bsndashboard.py  _8011_network_templates_admin.py
horizon_bsn/tests/: base.py  test_horizon_bsn.py
rhel/: python-horizon-bsn.spec
(+117 files in other folders)
