[metadata]
name = horizon-bsn
version = 0.0.18
summary = Big Switch Networks Extension for the Openstack Dashboard (Horizon).
description-file =
    README.rst
author = Big Switch Networks
author-email = horizon-bsn@bigswitch.com
home-page = http://www.bigswitch.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    horizon_bsn

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = horizon-bsn/locale
domain = horizon-bsn

[update_catalog]
domain = horizon-bsn
output_dir = horizon-bsn/locale
input_file = horizon-bsn/locale/horizon-bsn.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = horizon-bsn/locale/horizon-bsn.pot
